Update README with agent and orchestrator changes

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 # Rename this file to .env and populate with your OpenAI or Gemini API key
 
 OPENAI_API_KEY=your_openai_api_key_here
+GEMINI_API_NEOTEK_KEY=
