--- a/config/agent_config.json
+++ b/config/agent_config.json
@@ -1,6 +1,26 @@
 {
   "agent_generate_java_code": {
-    "model": "gpt-4",
-    "max_tokens": 2048
+    "provider": "gemini",
+    "model": "gemini-2.5-pro-exp-03-25",
+    "temperature": 0.1,
+    "top_p": 0.9,
+    "n": 1,
+    "max_tokens": 1000000
+  },
+  "agent_generate_brd": {
+    "provider": "gemini",
+    "model": "gemini-2.5-pro-exp-03-25",
+    "temperature": 0.1,
+    "top_p": 0.9,
+    "n": 1,
+    "max_tokens": 1000000
+  },
+  "agent_tal_tech_specs": {
+    "provider": "gemini",
+    "model": "gemini-2.5-pro-exp-03-25",
+    "temperature": 0.1,
+    "top_p": 0.9,
+    "n": 1,
+    "max_tokens": 1000000
   }
 }
