--- a/config/default_model_config.json
+++ b/config/default_model_config.json
@@ -1,6 +1,8 @@
 {
-  "model": "gpt-4",
-  "temperature": 0.3,
-  "max_tokens": 1024,
-  "provider": "openai"
+  "provider": "gemini",
+  "model": "gemini-2.5-pro-exp-03-25",
+  "temperature": 0.1,
+  "top_p": 0.9,
+  "n": 1,
+  "max_tokens": 1000000
 }
